--- a/blue.html
+++ b/blue.html
@@ -8,7 +8,7 @@
 	<h1 style="color: #00F">The blue page</h1>
 	<p>Blue is the color of the sky.</p>
 
-	<p><a href="index.html">return to home page</a></p>
+	<p><a href="index.html"Retornar al hogar</a></p>
 	<p>hola</p>
 
 </body>
